@@ -2,6 +2,7 @@
 
 	* headers.m4 (md_CREATE_LIBOBJC_HEADERS): Convert solaris2.5.1 and
 	solaris2.7 into solaris2.  Convert linux into linux-gnu.
+	Provide a compiler-info-generic default.
 
 1999-04-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
